# Task-management

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
app/: .env.example  .gitignore  build-0.1.3.ps1  build-release.ps1  index.html  make-zip.mjs  package.json  pnpm-lock.yaml  sign-updater.mjs  sign-updater2.mjs
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/permissions/: save-bytes.json  save-bytes.toml
app/src-tauri/src/: lib.rs
app/src/components/: AppLayout.tsx  ErrorBoundary.tsx  MultiSelectAssignees.tsx  NotificationsBell.tsx  RoleGuard.tsx  UpdateButton.tsx
app/src/contexts/: AuthContext.tsx  ThemeContext.tsx
app/src/lib/: admin.ts  format.ts  notify.ts  storage.ts  supabase.ts  utils.ts  version.ts
app/src/pages/: ChangePasswordPage.tsx  EmployeeDashboardPage.tsx  InactivePage.tsx  LoginPage.tsx  NotificationsPage.tsx  SettingsPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
app/src/types/: database.ts
supabase/: config.toml
supabase/migrations/: 20250101000000_init_schema.sql  20250101000100_helpers.sql  20250101000200_rls.sql  20250101000300_triggers.sql  20250101000400_views.sql  20250101000500_storage.sql  20250101000600_fix_view_security.sql  20250101000700_security_hardening.sql  20250101000800_audit_log.sql  20250101000900_multi_assignee.sql  20250101001000_fix_change_password_rpc.sql  20250101001100_active_user_rls.sql  20250101001200_function_lint_hardening.sql
supabase/seed/: 00-bootstrap-admin.sql
(+28 files in other folders)
